--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="button"></button>
+    <button id="button">VER QR</button>
     <canvas id="canvas"></canvas>
 </body>
 </html>
