--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <input type="text" name="text" id="text" />
     <input type="file" name="file" id="file" />
+    <button id="button">ENVIAR MENSAJE</button>
   </body>
 </html>
